--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0/" />
     <link rel="stylesheet" type="text/css" href="css/style.css" />
     <title>Link CSS to HTML</title>
     <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css'>   
@@ -38,7 +38,7 @@
                         <a class="navbar-link" href="menu.html">Menu</a>
                     </li>
                     <li class="nav-item ">
-                        <a class="navbar-link active brand" href="homepage.html">Tokyo Twist</a>
+                        <a class="navbar-link active brand" href="index.html">Tokyo Twist</a>
                     </li>
                     <li class="nav-item">
                         <a class="navbar-link" href="#">Contact us</a>
