--- a/menu.html
+++ b/menu.html
@@ -39,7 +39,7 @@
                         <a class="navbar-link active" href="#">Menu</a>
                     </li>
                     <li class="nav-item ">
-                        <a class="navbar-link brand" href="homepage.html">Tokyo Twist</a>
+                        <a class="navbar-link brand" href="index.html">Tokyo Twist</a>
                     </li>
                     <li class="nav-item">
                         <a class="navbar-link" href="#">Contact us</a>
