--- a/menu.html
+++ b/menu.html
@@ -42,7 +42,7 @@
                         <a class="navbar-link brand" href="index.html">Tokyo Twist</a>
                     </li>
                     <li class="nav-item">
-                        <a class="navbar-link" href="#">Contact us</a>
+                        <a class="navbar-link" href="contact.html">Contact us</a>
                     </li>
                 </ul>
             </div>
@@ -55,8 +55,8 @@
             <h1 class="col-12">Menu</h1>
             <h3 class="col-12">Tokyo Twist</h3>
         </div>
-        <div class="row">
-            <div class="col-6 menu-section">
+        <div class="row" style="background-color: #232323; border-radius: 5px; padding-top: 2rem; margin-bottom: 2rem;">
+            <div class="col-12 col-md-6 menu-section">
                 <ul>
                     <h2>Starters</h2>
                     <li>
@@ -156,7 +156,7 @@
                     </li>
                 </ul>
             </div>
-            <div class="col-6 menu-section">
+            <div class="col-12 col-md-6 menu-section">
                 <ul>
                     <h2>Mains</h2>
                     <li>
@@ -249,21 +249,21 @@
                 <h1 class="col-12">Specials</h1>
                 <div class="card col-6" style="width: 30rem; text-align: center;">
                     <h3 style="margin-top: 1rem; color: rgb(61, 61, 61);">Teriyaki Glazed Steak</h3>
-                    <img src="img/d2.jpg" class="card-img-top" alt="...">
+                    <img src="img/s6.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <p class="card-text">A juicy ribeye steak glazed with teriyaki sauce, served with a side of grilled vegetables and steamed rice. This dish offers a fusion of American and Japanese flavors, making it a perfect fit for an American-Japanese restaurant.</p>
                     </div>
                 </div>
                 <div class="card col-6" style="width: 30rem; text-align: center;">
                     <h3 style="margin-top: 1rem; color: rgb(61, 61, 61);">Sushi Burrito</h3>
-                    <img src="img/d2.jpg" class="card-img-top" alt="...">
+                    <img src="img/s5.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <p class="card-text">A large sushi roll that's wrapped in a flour tortilla, filled with fresh sushi-grade fish, avocado, cucumber, and sushi rice. This dish is a creative take on the traditional sushi roll, making it a popular choice for those who want to try something new.</p>
                     </div>
                 </div>
                 <div class="card col-12" style="width: 30rem; text-align: center;">
                     <h3 style="margin-top: 1rem; color: rgb(61, 61, 61);">Chicken Katsu Curry</h3>
-                    <img src="img/d2.jpg" class="card-img-top" alt="...">
+                    <img src="img/s7.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <p class="card-text">This dish features a breaded and fried chicken cutlet, served with a side of Japanese curry and rice. The curry is made with a blend of spices, including turmeric, cumin, and coriander, giving it a distinctive flavor that's perfect for an American-Japanese fusion restaurant.</p>
                     </div>
