--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
                         <a class="navbar-link" href="menu.html">Menu</a>
                     </li>
                     <li class="nav-item ">
-                        <a class="navbar-link active brand" href="index.html">Tokyo Twist</a>
+                        <a class="navbar-link active brand" href="#">Tokyo Twist</a>
                     </li>
                     <li class="nav-item">
-                        <a class="navbar-link" href="#">Contact us</a>
+                        <a class="navbar-link" href="contact.html">Contact us</a>
                     </li>
                 </ul>
             </div>
