--- a/menu.html
+++ b/menu.html
@@ -60,26 +60,26 @@
                 <ul>
                     <h2>Starters</h2>
                     <li>
-                        <h5>Edamame</h5>
+                        <h5>Edamame 9.99$</h5>
                         <p>Steamed soybeans tossed with sea salt or garlic sesame seasoning.</p>
                     </li>
                     <li>
-                        <h5>Gyoza</h5>
+                        <h5>Gyoza 9.99$</h5>
                         <p>Pan-fried Japanese dumplings with a savory filling of pork, chicken, or vegetable, served
                             with a side of dipping sauce.</p>
                     </li>
                     <li>
-                        <h5>Shrimp Tempura </h5>
+                        <h5>Shrimp Tempura 9.99$</h5>
                         <p>Crispy battered and deep-fried shrimp served with tempura dipping sauce and grated daikon
                             radish.</p>
                     </li>
                     <li>
-                        <h5>Tuna Poke</h5>
+                        <h5>Tuna Poke 9.99$</h5>
                         <p>Fresh diced tuna marinated in a sesame soy sauce, served with avocado, cucumber, and seaweed
                             salad.</p>
                     </li>
                     <li>
-                        <h5>Takoyaki</h5>
+                        <h5>Takoyaki 9.99$</h5>
                         <p>Traditional Japanese octopus balls, made with a crispy batter and filled with diced octopus,
                             green onions, and pickled ginger, topped with takoyaki sauce and bonito flakes.</p>
                     </li>
@@ -87,70 +87,70 @@
                 <ul>
                     <h2>Burgers</h2>
                     <li>
-                        <h5>Tokyo Teriyaki Burger</h5>
+                        <h5>Tokyo Teriyaki Burger 9.99$</h5>
                         <p>A juicy beef patty glazed with sweet teriyaki sauce, topped with grilled pineapple,
                             caramelized onions, and melted Swiss cheese.
                             Served with a side of wasabi mayo and crispy Asian-style fries.</p>
                     </li>
                     <li>
-                        <h5>Sumo Smash Burger</h5>
+                        <h5>Sumo Smash Burger 9.99$</h5>
                         <p>SA towering burger with two beef patties, crispy tempura shrimp, spicy mayo, pickled daikon
                             and carrot slaw,
                             and a sprinkle of furikake.
                             Served with a side of miso soup and edamame.</p>
                     </li>
                     <li>
-                        <h5>Samurai Salmon Burger <i class='fa fa-fire' style='color: white'></i></h5>
+                        <h5>Samurai Salmon Burger <i class='fa fa-fire' style='color: white'> 9.99$</i></h5>
                         <p>A grilled salmon fillet with a sesame crust, topped with spicy mayo, pickled ginger, lettuce,
                             and cucumber slices. Served with a side of seaweed salad and sesame cucumber salad.</p>
                     </li>
                     <li>
-                        <h5>Wasabi Wagyu Burger <i class='fa fa-fire' style='color: white'></i></h5>
+                        <h5>Wasabi Wagyu Burger <i class='fa fa-fire' style='color: white'> 9.99$</i></h5>
                         <p>A luxurious burger made with tender wagyu beef, topped with wasabi mayo,
                             pickled radish, arugula, and crispy fried onions. Served with a side of truffle fries.</p>
                     </li>
                     <li>
-                        <h5>Geisha Gochujang Burger <i class='fa fa-fire' style='color: white'></i></h5>
+                        <h5>Geisha Gochujang Burger <i class='fa fa-fire' style='color: white'> 9.99$</i></h5>
                         <p>A fusion burger with a spicy Korean twist,
                             featuring a beef patty glazed with gochujang sauce, kimchi, sesame slaw, and melted cheddar
                             cheese. Served with a side of kimchi fries.</p>
                     </li>
                 </ul>
                 <ul>
-                    <h2>Deserts</h2>
+                    <h2>Deserts 9.99$</h2>
                     <li>
-                        <h5>Mochi Ice Cream</h5>
+                        <h5>Mochi Ice Cream 9.99$</h5>
                         <p>A traditional Japanese dessert consisting of soft, chewy mochi (sweet rice dough) wrapped
                             around a ball of ice cream in various flavors such as green tea, black sesame, strawberry,
                             or mango.</p>
                     </li>
                     <li>
-                        <h5>Tempura Cheesecake</h5>
+                        <h5>Tempura Cheesecake 9.99$</h5>
                         <p>A unique fusion dish where cheesecake slices are coated in tempura batter and deep-fried to
                             crispy perfection. Served with a drizzle of raspberry or chocolate sauce.</p>
                     </li>
                     <li>
-                        <h5>Matcha Tiramisu</h5>
+                        <h5>Matcha Tiramisu 9.99$</h5>
                         <p>A Japanese twist on the classic Italian dessert, made with layers of ladyfingers soaked in
                             matcha green tea syrup, mascarpone cheese, and whipped cream, dusted with matcha powder.</p>
                     </li>
                     <li>
-                        <h5>Japanese-style Cheesecake</h5>
+                        <h5>Japanese-style Cheesecake 9.99$</h5>
                         <p>A fluffy and light cheesecake made with Japanese-style cream cheese, which is less sweet and
                             more tangy than its American counterpart. Served with fresh berries or fruit compote.</p>
                     </li>
                     <li>
-                        <h5>Kinako Pudding</h5>
+                        <h5>Kinako Pudding 9.99$</h5>
                         <p>A traditional Japanese dessert made with soybean flour (kinako) and silky smooth custard
                             pudding. Garnished with toasted kinako powder and whipped cream.</p>
                     </li>
                     <li>
-                        <h5>Green Tea Creme Brulee</h5>
+                        <h5>Green Tea Creme Brulee 9.99$</h5>
                         <p>A classic French dessert infused with Japanese green tea, topped with a crispy caramelized
                             sugar crust. Served with a scoop of vanilla ice cream or fresh fruit.</p>
                     </li>
                     <li>
-                        <h5>Red Bean Taiyaki</h5>
+                        <h5>Red Bean Taiyaki 9.99$</h5>
                         <p>A popular street food in Japan, taiyaki is a fish-shaped waffle filled with sweet red bean
                             paste. Served warm and topped with a scoop of vanilla or green tea ice cream.</p>
                     </li>
@@ -160,31 +160,31 @@
                 <ul>
                     <h2>Mains</h2>
                     <li>
-                        <h5>Chicken Katsu</h5>
+                        <h5>Chicken Katsu 9.99$</h5>
                         <p>Breaded and deep-fried chicken cutlets served with Japanese-style katsu sauce, steamed rice,
                             and miso soup.</p>
                     </li>
                     <li>
-                        <h5>Beef Teriyaki </h5>
+                        <h5>Beef Teriyaki 9.99$</h5>
                         <p>Tender slices of beef marinated in a sweet teriyaki sauce, grilled to perfection and served
                             with steamed vegetables and rice.</p>
                     </li>
                     <li>
-                        <h5>Miso Glazed Salmon </h5>
+                        <h5>Miso Glazed Salmon 9.99$</h5>
                         <p>Grilled salmon fillet with a miso glaze, served with roasted vegetables and quinoa.</p>
                     </li>
                     <li>
-                        <h5>Tempura Udon</h5>
+                        <h5>Tempura Udon 9.99$</h5>
                         <p>Thick wheat noodles served in a hot dashi broth, topped with crispy tempura shrimp and
                             vegetables.</p>
                     </li>
                     <li>
-                        <h5>Veggie Ramen </h5>
+                        <h5>Veggie Ramen 9.99$</h5>
                         <p>A hearty bowl of ramen with rich vegetable broth, topped with tofu, mushrooms, corn, and
                             green onions.</p>
                     </li>
                     <li>
-                        <h5>Ramen Bowl </h5>
+                        <h5>Ramen Bowl 9.99$</h5>
                         <p>A comforting bowl of steaming ramen with rich pork broth, tender chashu pork, soft-boiled
                             egg, nori, and scallions, served with a side of crispy gyoza.</p>
                     </li>
@@ -192,52 +192,52 @@
                 <ul>
                     <h2>Drinks</h2>
                     <li>
-                        <h5>Tokyo Sunrise</h5>
+                        <h5>Tokyo Sunrise 9.99$</h5>
                         <p>A tropical cocktail made with rum, coconut milk, pineapple juice, and grenadine, garnished
                             with an orange slice and cherry.</p>
                     </li>
                     <li>
-                        <h5>Matcha Mojito</h5>
+                        <h5>Matcha Mojito 9.99$</h5>
                         <p>A refreshing twist on the classic mojito, made with matcha green tea powder, fresh mint, lime
                             juice, simple syrup, and soda water.</p>
                     </li>
                     <li>
-                        <h5>Wasabi Bloody Mary </h5>
+                        <h5>Wasabi Bloody Mary 9.99$</h5>
                         <p>A spicy and savory cocktail with vodka, tomato juice, wasabi, Worcestershire sauce, and
                             garnished with a celery stick and lemon wedge.</p>
                     </li>
                     <li>
-                        <h5>Sake Sangria </h5>
+                        <h5>Sake Sangria 9.99$</h5>
                         <p>A Japanese-inspired twist on traditional sangria, made with sake, plum wine, fresh fruit, and
                             a splash of soda water.</p>
                     </li>
                     <li>
-                        <h5>Yuzu Margarita </h5>
+                        <h5>Yuzu Margarita 9.99$</h5>
                         <p>A tangy and citrusy margarita made with yuzu juice, tequila, triple sec, and agave syrup,
                             served with a salted rim and yuzu twist.</p>
                     </li>
                     <li>
-                        <h5>Japanese Lager </h5>
+                        <h5>Japanese Lager 9.99$</h5>
                         <p>Classic Japanese lager with a crisp and clean taste, perfect for pairing with sushi or
                             tempura.</p>
                     </li>
                     <li>
-                        <h5>Asahi Black </h5>
+                        <h5>Asahi Black 9.99$</h5>
                         <p>A dark lager with a rich and smooth flavor, featuring notes of roasted malt and coffee.</p>
                     </li>
                     <li>
-                        <h5>Junmai</h5>
+                        <h5>Junmai 9.99$</h5>
                         <p>Junmai - A classic sake with a full-bodied flavor and a smooth, clean finish, made from rice
                             polished to at least 70% or higher, offering a good balance between sweetness and acidity.
                         </p>
                     </li>
                     <li>
-                        <h5>Honjozo</h5>
+                        <h5>Honjozo 9.99$</h5>
                         <p>A versatile sake with a dry and crisp taste, perfect for pairing with a wide range of dishes,
                             from sushi to grilled meats.</p>
                     </li>
                     <li>
-                        <h5>Yuzu IPA </h5>
+                        <h5>Yuzu IPA 9.99$</h5>
                         <p>India Pale Ale infused with yuzu, a citrus fruit popular in Japanese cuisine, for a unique
                             and refreshing flavor profile.</p>
                     </li>
@@ -251,6 +251,7 @@
                     <h3 style="margin-top: 1rem; color: rgb(61, 61, 61);">Teriyaki Glazed Steak</h3>
                     <img src="img/s6.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
+                        <h3>9.99$</h3>
                         <p class="card-text">A juicy ribeye steak glazed with teriyaki sauce, served with a side of grilled vegetables and steamed rice. This dish offers a fusion of American and Japanese flavors, making it a perfect fit for an American-Japanese restaurant.</p>
                     </div>
                 </div>
@@ -258,6 +259,7 @@
                     <h3 style="margin-top: 1rem; color: rgb(61, 61, 61);">Sushi Burrito</h3>
                     <img src="img/s5.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
+                        <h3>9.99$</h3>
                         <p class="card-text">A large sushi roll that's wrapped in a flour tortilla, filled with fresh sushi-grade fish, avocado, cucumber, and sushi rice. This dish is a creative take on the traditional sushi roll, making it a popular choice for those who want to try something new.</p>
                     </div>
                 </div>
@@ -265,6 +267,7 @@
                     <h3 style="margin-top: 1rem; color: rgb(61, 61, 61);">Chicken Katsu Curry</h3>
                     <img src="img/s7.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
+                        <h3>9.99$</h3>
                         <p class="card-text">This dish features a breaded and fried chicken cutlet, served with a side of Japanese curry and rice. The curry is made with a blend of spices, including turmeric, cumin, and coriander, giving it a distinctive flavor that's perfect for an American-Japanese fusion restaurant.</p>
                     </div>
                 </div>
